# swarm-algorithm

./: CMakeLists.txt  README.md
app/: main.cpp
docs/: Literature Guide.md  LiteratureGuide.md
include/: hrect.hpp  sofa_base.hpp
materials/: PRESENTATION_GUIDE.md  Алгоритмы и функции для сравнения.docx  Презентация.pptx
src/: module.cpp  sofa_base.cpp
tests/: CMakeLists.txt  sofa_base_tests.cpp  test_matrix.cpp  test_module.cpp
